--- a/EurekaModule/src/main/resources/application.yml
+++ b/EurekaModule/src/main/resources/application.yml
@@ -1,15 +1,18 @@
 server:
   port: 8761
 
+spring:
+  application:
+    name: eureka-server
+
 eureka:
+  instance:
+    hostname: localhost
   server:
     response-cache-update-interval-ms: 5
   client:
     register-with-eureka: false
     fetch-registry: false
     registry-fetch-interval-seconds: 5
-
-spring:
-  application:
-    name: eureka-server
-
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
